2016-04-18  Niibe Yutaka  <gniibe@fsij.org>

	* example-fs-bb48: New directory for FS-BB48.

	* clk_gpio_init-kl.c: New.
	* clk_gpio_init-stm32.c: Rename from clk_gpio_init.c.

2016-04-07  Niibe Yutaka  <gniibe@fsij.org>

	* example-fsm-55/sys.c: Update for non-SVC Chopstx.

2016-04-07  Niibe Yutaka  <gniibe@fsij.org>

	* example-cdc/usb-cdc.c: Update.

	* example-cdc/usb_stm32f103.c (usb_handle_transfer): Don't use
	weak symbols for callbacks, but use explicit callbacks of
	usb_cb_tx_done and usb_cb_rx_ready.

	* example-cdc/usb_lld.h (usb_cb_tx_done, usb_cb_rx_ready): New
	callbacks.

2016-04-07  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_cpu_sched_lock, chx_cpu_sched_unlock): Use SVC
	for Cortex-M3, because of ICI/IT of ESPR.
	(chx_sched): Invoke svc for Cortex-M3.
	(preempt, svc): Change back for Cortex-M3.

2016-04-07  Niibe Yutaka  <gniibe@fsij.org>

	* entry.c (vector_table): Since IDLE thread runs with PSP now, use
	different value for MSP.

	* chopstx.c (chx_sched): Push LR value to PC slot on stack, so
	that it returns directly to caller.

2016-04-06  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (struct chx_pq): New struct for priority queue.
	(struct chx_px): New struct for proxy.
	(struct chx_thread): New member FLAG_IS_PROXY.
	(ll_dequeue, ll_insert, ll_pop, ll_prio_push, ll_prio_enqueue)
	Change API.
	(THREAD_WAIT_POLL): New thread status.
	(chx_ready_pop, chx_ready_push, chx_ready_enqueue): Type coercion.
	(chx_timer_insert, chx_timer_dequeue, chx_timer_expired): Use
	chx_pq.
	(chx_handle_intr, chopstx_cancel): Handle THREAD_WAIT_POLL.
	(chx_init): Type coercion.
	(chx_exit): Handle proxy for join.
	(chopstx_create): Initialize the member FLAG_IS_PROXY.
	(chopstx_cond_signal) Handle proxy.
	(chx_proxy_init, chopstx_poll): New.

2016-04-06  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.h (struct chx_qh): New struct.

	* chopstx.c (struct chx_queue): Use chx_qh.
	(struct chx_thread): New member PARENT.
	(ll_empty): Use chx_qh.