@@ -1,0 +1,5 @@
+void crc32_init (void);
+void crc32_u8 (unsigned char);
+void crc32_u32 (unsigned int);
+
+unsigned int crc32_value (void);
